--- a/SistemaReparto/Mail/templates/delivered.html
+++ b/SistemaReparto/Mail/templates/delivered.html
@@ -6,15 +6,6 @@
   xmlns:v="urn:schemas-microsoft-com:vml"
 >
   <head>
-    <!--[if gte mso 9
-      ]><xml
-        ><o:OfficeDocumentSettings
-          ><o:AllowPNG /><o:PixelsPerInch
-            >96</o:PixelsPerInch
-          ></o:OfficeDocumentSettings
-        ></xml
-      ><!
-    [endif]-->
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta content="width=device-width" name="viewport" />
     <!--[if !mso]><!-->
@@ -237,7 +228,7 @@
   >
     <!--[if IE]><div class="ie-browser"><![endif]-->
     <table
-      bgcolor="#ffffff"
+      bg-color="#ffffff"
       cellpadding="0"
       cellspacing="0"
       class="nl-container"
